--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Magento Installation</title>
-    <link rel="stylesheet" href="C:\\Users\sathish_a\Music\OLD_SYSTEM_88\python\Webpage\static\css\styleCss.css">
+    <link rel="stylesheet" href="static\css\styleCss.css">
 </head>
 
 
@@ -17,14 +17,41 @@
                 </div>
         
 
-                <div class="form">
-                        <form>
-                                <h3>Registration Form</h3>
+                <div class="forms">
+                        <form action="", method='post'>
+                                <h3>User Details</h3>
                                 <table>
                                         <tr>
                                                 <td>Name: </td>
-                                                <td><input type="text"</td>
+                                                <td><input type="text" name="name"</td>
                                         </tr>
+
+                                        <tr>
+                                                <td>Email ID: </td>
+                                                <td><input type="email" name="email"</td>
+                                        </tr>
+
+                                        <tr>
+                                                <td>System IP: </td>
+                                                <td><input type="text" name="sys_ip"</td>
+                                        </tr>
+
+                                        <tr>
+                                                <td>System UserName: </td>
+                                                <td><input type="text" name="sys_username"</td>
+                                        </tr>
+
+                                        <tr>
+                                                <td>System Password: </td>
+                                                <td><input type="password" name="sys_password"</td>
+                                        </tr>
+
+                                        <tr>
+                                                <td><input type="submit"</td> <td><input type="reset"</td>
+                                        </tr>
+
+
+
                                 </table>
                         </form>
         </center>
